--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.1
   json_annotation: ^3.0.0
   provider: ^4.3.0
+  udp: ^3.0.3
 
 dev_dependencies:
   flutter_test:
