--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   json_annotation: ^3.0.0
   provider: ^4.3.0
   udp: ^3.0.3
+  shared_preferences: ^0.5.12
 
 dev_dependencies:
   flutter_test:
