--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   provider: ^4.3.0
   udp: ^3.0.3
   shared_preferences: ^0.5.12
+  device_info: ^1.0.0
 
 dev_dependencies:
   flutter_test:
