--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,13 @@ dev_dependencies:
   build_runner: ^1.0.0
   json_serializable: ^3.2.0
   test: ^1.15.7
-  
+
 flutter:
   uses-material-design: true
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/MontserratAlternates-Regular.ttf
+        - asset: fonts/MontserratAlternates-Italic.ttf
+        - asset: fonts/MontserratAlternates-Light.ttf
+        - asset: fonts/MontserratAlternates-LightItalic.ttf
