--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   udp: ^3.0.3
   shared_preferences: ^0.5.12
   device_info: ^1.0.0
+  cached_network_image: ^2.4.1
 
 dev_dependencies:
   flutter_test:
