--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   shared_preferences: ^0.5.12
   device_info: ^1.0.0
   cached_network_image: ^2.4.1
+  intl: ^0.16.1
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
