fixed server freeze bug

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   device_info: ^1.0.0
   cached_network_image: ^2.4.1
   intl: ^0.16.1
-  flutter_spinkit: "^4.1.2"
+  flutter_spinkit: ^4.1.2
+  pedantic: ^1.9.2
 
 dev_dependencies:
   flutter_test:
